plugins {
    id 'java'
    id 'io.spring.dependency-management' version "$springDepMgmt"
}

subprojects {
    group = 'com.faas'
    version = '0.0.1-SNAPSHOT'

    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:$springBoot"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation "org.slf4j:slf4j-api:$slf4j"

        testImplementation platform("org.junit:junit-bom:$junit")
        testImplementation 'org.junit.jupiter:junit-jupiter'

        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        implementation 'com.fasterxml.jackson.core:jackson-databind'
    }

    test {
        useJUnitPlatform()
    }
}
